--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Tianhao Liu # the website title (if blank, full name will be used instead)
 first_name: Tianhao
-middle_name: 
+# middle_name: 
 last_name: Liu
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
